--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Connected</title>
+  </head>
+  <body>
+    <h1>
+      You are connected!
+    </h1>
+  </body>
+</html>
