meta added in html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Connected</title>
+    <meta charset="utf-8">
+    <title>Connected</title>        
   </head>
   <body>
     <h1>
